fix community chat bug, fix long message wrapping, quote replies, partial quote replies

--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -39,6 +39,10 @@
     width: 54px;
     height: 54px;
 }
+.avMini {
+    width: 20px;
+    height: 20px;
+}
 .avMessage {
     width: 42px;
     height: 42px;
@@ -49,6 +53,7 @@
 }
 .w-200 { width: 200px; }
 .mr-5px { margin-right: 5px;}
+.oi-x { top: 0px;}
 
 @tailwind base;
 @tailwind components;
